# KIST_DualArm

./: CMakeLists.txt  README.md  get_home.cpp
include/: custommath.h  ethercat_xenomai_dualarm.h  get_home.h  robotmodel.h  task_controller.h
model/: dualarm.urdf
src/: get_home.cpp  robotmodel.cpp  task_controller.cpp
